test(it): add post test cases